--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
                 <artifactId>javafx-controls</artifactId>
                 <version>11</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>5.10.0</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
 
 
