--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
                     <mainClass>com.arkanoid.ui.MainApp</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
